[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "test-keishis"
version = "0.2.8"
requires-python = ">=3.13"
description = "A test package for KeishiS"
readme = "README.md"
keywords = ["rust", "python", "example"]
authors = [
  {name = "Keishi Sando", email = "sando.keishi.sp@alumni.tsukuba.ac.jp"},
  {name = "KeishiS", email = "sando.keishi@ism.ac.jp"}
]
maintainers = [
  {name = "Keishi Sando", email = "sando.keishi.sp@alumni.tsukuba.ac.jp"}
]
classifiers = [
    "Programming Language :: Rust",
]

[project.urls]
repository = "https://github.com/KeishiS/test-keishis"

[tool.maturin]
python-source = "python"
module-name = "test_keishis._test_keishis"
bindings = "pyo3"
